--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -4,12 +4,6 @@
     width: 100%; 
     margin-bottom: -5px;   
 }
-.tempiframe{
-    height: 450px;
-    width: 100%;
-    background-color: #c8c8c8;
-}
-
 .contact{
     background-color: #171717;    
     color: white;
